--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "gotopark.buster.chinaLotgen"
         minSdkVersion 17
         targetSdkVersion 28
+        multiDexEnabled true
         versionCode 3
         versionName '1.0.1'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -48,6 +49,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'org.jsoup:jsoup:1.11.2'
     implementation 'com.github.hotchemi:android-rate:1.0.1'
