First China Lotgen select manual number
Signed-off-by: buster <jonglae@gmail.com>

--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 16 03:09:09 KST 2019
-ndk.dir=D\:\\Android\\SDK\\ndk-bundle
-sdk.dir=D\:\\Android\\SDK
+#Tue Jun 25 12:06:44 KST 2019
+ndk.dir=/home/buster/Android/Sdk/ndk-bundle
+sdk.dir=/home/buster/Android/Sdk
